--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -53,6 +53,8 @@
     </button>
     <p id="log"></p>
 
+    <h2>The outdated <code style="background-color: rgb(174, 187, 200); padding-left: 2px;padding-right: 2px;"><i>event.which</i></code></h2>
+
     <script>
       const button = document.querySelector("#mouse-button");
       button.addEventListener("mouseup", function(e) {
