--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/index.html
@@ -54,6 +54,9 @@
     <p id="log"></p>
 
     <h2>The outdated <code style="background-color: rgb(174, 187, 200); padding-left: 2px;padding-right: 2px;"><i>event.which</i></code></h2>
+    <button id="event-which" oncontextmenu="event.preventDefault();">
+      event.which
+    </button>
 
     <script>
       const button = document.querySelector("#mouse-button");
@@ -78,6 +81,11 @@
           default:
             log.textContent = `Unknown button code: ${e.button}`;
         }
+      });
+
+      const eventWhich = document.querySelector("#event-which");
+      eventWhich.addEventListener("mouseup", function(e) {
+        console.log(e.which);
       });
     </script>
   </body>
