--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
@@ -14,6 +14,10 @@
         if (e.altKey) {
           console.log("You pressed a alt/opt key");
         }
+
+        if (e.ctrlKey) {
+          console.log("You pressed a control key");
+        }
       }
     </script>
   </body>
