--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
@@ -18,6 +18,10 @@
         if (e.ctrlKey) {
           console.log("You pressed a control key");
         }
+
+        if (e.metaKey) {
+          console.log("You pressed a command key");
+        }
       }
     </script>
   </body>
