--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
@@ -22,6 +22,10 @@
         if (e.metaKey) {
           console.log("You pressed a command key");
         }
+
+        if (e.altKey && e.shiftKey) {
+          alert("Hooray");
+        }
       }
     </script>
   </body>
