--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/modifiers.html
@@ -2,7 +2,11 @@
 <html>
   <body>
     <h2>Modifiers</h2>
-    <button id="button">Alt+Shift+Click on me!</button>
+    <button id="button" 
+      oncontextmenu="event.preventDefault(); console.log(event.ctrlKey);"
+    >
+      Alt+Shift+Click on me!
+    </button>
 
     <script>
       const button = document.querySelector("#button");
