--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/coordinates.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/coordinates.html
@@ -5,8 +5,8 @@
 
     <script>
       const input = document.querySelector("input");
-      input.onmousemove = function() {
-        console.log(this.value);
+      input.onmousemove = function(e) {
+        this.value = e.clientX + ":" + e.clientY;
       } 
     </script>
   </body>
