--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/coordinates.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/coordinates.html
@@ -7,8 +7,11 @@
       const input = document.querySelector("input");
       input.onmousemove = function(e) {
         this.value = e.clientX + ":" + e.clientY;
-        console.log(e.pageX, e.pageY);
       } 
+
+      document.addEventListener("mousemove", function(e) {
+        console.log(e.pageX, e.pageY);
+      });
     </script>
   </body>
 </html>
