--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/preventing-selection-on-mousedown.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/preventing-selection-on-mousedown.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>Double click me</p>
+    <p ondblclick="console.log('dblclick')">Double click me</p>
     <script>
       console.log("Ola, tudo bem?");
     </script>
