--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/preventing-selection-on-mousedown.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/preventing-selection-on-mousedown.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p ondblclick="console.log('dblclick')">Double click me</p>
+    <p 
+      ondblclick="console.log('dblclick');"
+    >
+      Double click me
+    </p>
+
+    Before...
+    <b 
+      ondblclick="console.log('Ups, you double clicked me!')"
+      onmousedown="event.preventDefault();"
+    >
+      Double click me
+    </b>
+    ...After
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
