--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .selected {
+        background-color: #0f0;
+      }
+
+      li {
+        cursor: pointer;
+      }
+    </style>
+  </head>
   <body>
+    Click on a list item to select it.
+    <br>
+    
     <script>
       console.log("Ola, tudo bem?");
     </script>
