--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list.html
@@ -14,9 +14,25 @@
   <body>
     Click on a list item to select it.
     <br>
-    
+
+    <ul>
+      <li>Christopher Robin</li>
+      <li>Winnie-the-Pooh</li>
+      <li>Tigger</li>
+      <li>Kanga</li>
+      <li>Rabbit. Just rabbit.</li>
+    </ul>
+
     <script>
-      console.log("Ola, tudo bem?");
+      const ul = document.querySelector("ul");
+
+      ul.querySelectorAll("li").forEach(function(li) {
+        li.onmousedown = function(e) {
+          e.preventDefault();
+        }
+      });
+
+      console.log(ul);
     </script>
   </body>
 </html>
