--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list.html
@@ -32,7 +32,13 @@
         }
       });
 
-      console.log(ul);
+      ul.querySelectorAll("li").forEach(function(li) {
+        li.onclick = function(e) {
+          if (e.ctrlKey || e.metaKey) {
+            li.classList.toggle("selected");
+          }
+        }
+      });
     </script>
   </body>
 </html>
