--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .selected {
+        background-color: #0f0;
+      }
+
+      li {
+        cursor: pointer;
+      }
+    </style>
+  </head>
   <body>
+    Click on a list item to select
+    <br>
+    <ul>
+      <li>Christopher Robin</li>
+      <li>Winnie-the-Pooh</li>
+      <li>Tigger</li>
+      <li>Kanga</li>
+      <li>Rabbit. Just rabbit.</li>
+    </ul>
+    
     <script>
       console.log("Ola, tudo bem?");
     </script>
