--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
@@ -30,6 +30,13 @@
           return;
         }
         
+        for (const li of ul.querySelectorAll("li")) {
+          if (li === target) {
+            target.classList.add("selected");
+          } else {
+            li.classList.remove("selected");
+          }
+        }
       }
     </script>
   </body>
