--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
@@ -24,6 +24,10 @@
 
     <script>
       const ul = document.querySelector("ul");
+      ul.onmousedown = function() {
+        return false;
+      }
+      
       ul.onclick = function(e) {
         const target = e.target;
         if (target.nodeName !== "LI") {
