--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
@@ -27,18 +27,22 @@
       ul.onmousedown = function() {
         return false;
       }
-      
+
       ul.onclick = function(e) {
         const target = e.target;
         if (target.nodeName !== "LI") {
           return;
         }
-        
-        for (const li of ul.querySelectorAll("li")) {
-          if (li === target) {
-            target.classList.add("selected");
-          } else {
-            li.classList.remove("selected");
+
+        if (e.metaKey || e.ctrlKey) {
+          target.classList.toggle("selected");
+        } else {
+          for (const li of ul.querySelectorAll("li")) {
+            if (li === target) {
+              target.classList.add("selected");
+            } else {
+              li.classList.remove("selected");
+            }
           }
         }
       }
