--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
@@ -37,18 +37,22 @@
         if (e.metaKey || e.ctrlKey) {
           toggleSelect(target);
         } else {
-          for (const li of ul.querySelectorAll("li")) {
-            if (li === target) {
-              target.classList.add("selected");
-            } else {
-              li.classList.remove("selected");
-            }
-          }
+          singleSelect(target);
         }
       }
 
       function toggleSelect(li) {
         li.classList.toggle("selected");
+      }
+
+      function singleSelect(li) {
+        for (const l of ul.querySelectorAll("li")) {
+          if (l === target) {
+            li.classList.add("selected");
+          } else {
+            l.classList.remove("selected");
+          }
+        }
       }
     </script>
   </body>
