--- a/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/mouse-events/tasks/selectable-list-using-event-delegation.html
@@ -46,11 +46,11 @@
       }
 
       function singleSelect(li) {
-        for (const l of ul.querySelectorAll("li")) {
-          if (l === target) {
+        for (const elem of ul.querySelectorAll("li")) {
+          if (elem === li) {
             li.classList.add("selected");
           } else {
-            l.classList.remove("selected");
+            elem.classList.remove("selected");
           }
         }
       }
