Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -20,9 +20,9 @@
       }
 
       box.onmouseleave = function(e) {
-        console.log(e.clientX);
+        console.log("target:", e.target.nodeName);
+        console.log("relatedTarget:", e.relatedTarget.nodeName);
       }
-      // console.log(box);
     </script>
   </body>
 </html>
