Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <style>
+      html, body {
+        padding: 0;
+        margin: 0;
+      }
 
+      #container {
+        border: 1px solid brown;
+        padding: 10px;
+        width: 330px;
+        margin-bottom: 5px;
+        box-sizing: border-box;
+      }
     </style>
   </head>
   <body>
@@ -29,6 +40,7 @@
     <textarea id="log" cols="30" rows="10">
       Events will show up here!
     </textarea>
+
     <script>
       console.log("T");
     </script>
