--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -37,9 +37,7 @@
       </div>
     </div>
 
-    <textarea id="log" cols="30" rows="10">
-      Events will show up here!
-    </textarea>
+    <textarea id="log">Events will show up here!</textarea>
 
     <script>
       console.log("T");
