Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -14,6 +14,13 @@
         margin-bottom: 5px;
         box-sizing: border-box;
       }
+
+      #log {
+        height: 120px;
+        width: 350px;
+        display: block;
+        box-sizing: border-box;
+      }
     </style>
   </head>
   <body>
