Moving the mouse: mouseover/out, mouseent/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -28,6 +28,22 @@
         height: 70px;
         border-radius: 50%;
         margin-right: 20px;
+        position: relative;
+      }
+
+      .smiley-green {
+        background-color: #a9db7a;
+        border: 5px solid #92c563;
+      }
+
+      .smiley-yellow {
+        background-color: #eed16a;
+        border: 5px solid #dbae51;
+      }
+
+      .smiley-red {
+        background-color: #ee9295;
+        border: 5px solid #e27378;
       }
     </style>
   </head>
