Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -36,6 +36,16 @@
         border: 5px solid #92c563;
       }
 
+      .smiley-green .left-eye {
+        width: 18%;
+        height: 18%;
+        background-color: #84b458;
+        position: relative;
+        top: 29%;
+        left: 22%;
+        border-radius: 50%;
+      }
+
       .smiley-yellow {
         background-color: #eed16a;
         border: 5px solid #dbae51;
