Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -44,6 +44,18 @@
         top: 29%;
         left: 22%;
         border-radius: 50%;
+        float: left;
+      }
+
+      .smiley-green .right-eye {
+        width: 18%;
+        height: 18%;
+        background-color: #84b458;
+        position: relative;
+        top: 29%;
+        right: 22%;
+        float: right;
+        border-radius: 50%;
       }
 
       .smiley-yellow {
