Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -58,6 +58,16 @@
         border-radius: 50%;
       }
 
+      .smiley-green .smile {
+        position: absolute;
+        top: 67%;
+        left: 16.5%;
+        width: 70%;
+        height: 20%;
+        overflow: hidden;
+        /* background-color: #84b458; */
+      }
+
       .smiley-yellow {
         background-color: #eed16a;
         border: 5px solid #dbae51;
