Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -65,7 +65,17 @@
         width: 70%;
         height: 20%;
         overflow: hidden;
-        /* background-color: #84b458; */
+      }
+
+      .smiley-green .smile::after {
+        content: "";
+        position: absolute;
+        top: -50%;
+        left: 0%;
+        border-radius: 50%;
+        background-color: #84b458;
+        height: 100%;
+        width: 97%;
       }
 
       .smiley-yellow {
