Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -83,6 +83,17 @@
         border: 5px solid #dbae51;
       }
 
+      .smiley-yellow .left-eye {
+        width: 18%;
+        height: 18%;
+        background-color: #dba652;
+        position: relative;
+        top: 29%;
+        left: 22%;
+        border-radius: 50%;
+        float: left;
+      }
+
       .smiley-red {
         background-color: #ee9295;
         border: 5px solid #e27378;
