Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -105,6 +105,16 @@
         float: right;
       }
 
+      .smiley-yellow .smile {
+        position: absolute;
+        top: 67%;
+        left: 19%;
+        width: 65%;
+        height: 12%;
+        background-color: #dba652;
+        border-radius: 8px;
+      }
+
       .smiley-red {
         background-color: #ee9295;
         border: 5px solid #e27378;
