--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -115,6 +115,17 @@
         border-radius: 8px;
       }
 
+      .smiley-red .left-eye {
+        width: 18%;
+        height: 18%;
+        border-radius: 50%;
+        position: relative;
+        background-color: #d96065;
+        top: 29%;
+        left: 22%;
+        float: left;
+      }
+
       .smiley-red {
         background-color: #ee9295;
         border: 5px solid #e27378;
