Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -137,6 +137,27 @@
         float: right;
       }
 
+      .smiley-red .smile {
+        position: absolute;
+        top: 57%;
+        left: 16.5%;
+        width: 70%;
+        height: 20%;
+        overflow: hidden;
+        background-color: black;
+      }
+
+      /* .smiley-red .smile::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0%;
+        border-radius: 50%;
+        background-color: #d96065;
+        height: 100%;
+        width: 97%;
+      } */
+
       .smiley-red {
         background-color: #ee9295;
         border: 5px solid #e27378;
