Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -144,20 +144,19 @@
         width: 70%;
         height: 20%;
         overflow: hidden;
-        background-color: black;
       }
 
-      /* .smiley-red .smile::after {
+      .smiley-red .smile::after {
         content: "";
         position: absolute;
         top: 50%;
         left: 0%;
-        border-radius: 50%;
-        background-color: #d96065;
-        height: 100%;
         width: 97%;
-      } */
-
+        height: 100%;
+        background-color: #d96065;
+        border-radius: 50%;
+      }
+      
       .smiley-red {
         background-color: #ee9295;
         border: 5px solid #e27378;
