Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -184,16 +184,21 @@
       </div>
     </div>
 
-    <textarea id="log">Events will show up here!</textarea>
+    <textarea id="log">Events will show up here!
+</textarea>
 
     <script>
       const container = document.getElementById("container");
       container.onmouseover = function(e) {
         this.style.backgroundColor = "black";
+        const log = document.querySelector("textarea");
+        log.value += e.type + "\n";
       }
 
       container.onmouseout = function(e) {
         this.style.backgroundColor = "";
+        const log = document.querySelector("textarea");
+        log.value += e.type + "\n";
       }
     </script>
   </body>
