Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -189,16 +189,17 @@
 
     <script>
       const container = document.getElementById("container");
+      const log = document.querySelector("textarea");
       container.onmouseover = function(e) {
         this.style.backgroundColor = "black";
-        const log = document.querySelector("textarea");
         log.value += e.type + "\n";
+        log.scrollTop = log.scrollHeight;
       }
 
       container.onmouseout = function(e) {
         this.style.backgroundColor = "";
-        const log = document.querySelector("textarea");
         log.value += e.type + "\n";
+        log.scrollTop = log.scrollHeight;
       }
     </script>
   </body>
