Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/emoji.html
@@ -200,8 +200,8 @@
       }
 
       container.onmouseout = function(e) {
-        const target = e.target.className || e.target.nodeName;
-        const relatedTarget = e.relatedTarget.className || e.relatedTarget.nodeName
+        const target = !e.target ? "null" : e.target.className || e.target.nodeName;
+        const relatedTarget = !e.relatedTarget ? "null" : e.relatedTarget.className || e.relatedTarget.nodeName
         this.style.backgroundColor = "";
         log.value += e.type + ":  target=" + target + ",  relatedTarget=" + relatedTarget + "\n";
         log.scrollTop = log.scrollHeight;
