Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -12,6 +12,8 @@
   <body>
     <div class="box"></div>
 
+    <h3>Skipping elements</h3>
+
     <script>
       const box = document.querySelector(".box");
       box.onmouseover = function(e) {
