Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -7,12 +7,27 @@
         height: 200px;
         background-color: lightcoral;
       }
+
+      #container {
+        width: 600px;
+        height: 100px;
+        background-color: lightblue;
+      }
     </style>
   </head>
   <body>
     <div class="box"></div>
 
     <h3>Skipping elements</h3>
+
+    <div id="container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
     <script>
       const box = document.querySelector(".box");
