Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      * {
+        box-sizing: border-box;
+      }
+
       .box {
         width: 300px;
         height: 200px;
@@ -12,6 +16,15 @@
         width: 600px;
         height: 100px;
         background-color: lightblue;
+        display: flex;
+        gap: 20px;
+        padding: 10px;
+      }
+
+      #container div {
+        width: 16.66%;
+        height: 90px;
+        background-color: antiquewhite;
       }
     </style>
   </head>
