--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <style>
+      #parent {
+        background-color: #99C0C3;
+        width: 160px;
+        height: 120px;
+        position: relative;
+      }
       textarea {
         display: block;
         width: 300px;
